--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,17 +36,16 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'com.github.kittinunf.fuel:fuel:2.3.1'
-    implementation 'hu.blackbelt.karaf.features:bouncycastle:1.61.2'
-    implementation "com.madgag.spongycastle:core:1.58.0.0"
-    implementation "com.madgag.spongycastle:prov:1.58.0.0"
+    implementation 'org.bouncycastle:bcprov-jdk15to18:1.67'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
